# mavlink-telemetry-dashboard

./: CMakeLists.txt  cleanup.sh  setup-guide.md
src/: display_manager.cpp  display_manager.h  main.cpp  telemetry_reader.cpp  telemetry_reader.h
